Qt4 installation on Mac changes, installation howto changed no aswell ;)

--- a/instal.tex
+++ b/instal.tex
@@ -220,9 +220,7 @@ The compilation of {\twodx} has some additional dependencies compared with the p
 
 	\item \textbf{Qt4} The installation of Qt4 on Mac and Linux are fundamentally different:
 		\begin{itemize}
-			\item \textbf{Qt4 on Mac} Please get the latest Qt4 version from \url{http://qt.nokia.com/products/} and install the entire QtSDK on your machine. After the installation you have to ensure that \texttt{qmake} is in your \$PATH. In general you have to type something like this:
-			\newline
-			\texttt{export PATH='PATH\_TO\_SDK'/QtSDK/Desktop/Qt/4.8.0/} \texttt{gcc/bin:\$PATH} \newline where you replace \texttt{'PATH\_TO\_SDK'} by your concrete QtSDK installation path.
+			\item \textbf{Qt4 on Mac} Please get the latest Qt4 version from \url{http://qt-project.org/downloads/} and install the entire QtSDK on your machine. After the installation you have to ensure that \texttt{qmake} is in your \$PATH. 
 			\item \textbf{Qt4 on Linux} On Ubuntu you can just install \texttt{libqt4-dev} with all the automatically resolved dependencies by means of the native package manager. On Fedora the required package is called \texttt{qt-devel} with \texttt{qtwebkit-devel} as additional required dependency.
 		\end{itemize}
 		
