single particle documentation startec

--- a/2dx_manual.bib
+++ b/2dx_manual.bib
@@ -54,4 +54,13 @@
 	author = {X Zeng and H Stahlberg and N Grigorieff},
 }
 
+@article{scherer2013single,
+  title={Single particle 3D reconstruction for 2D crystal images of membrane proteins},
+  author={Scherer, Sebastian and Arheit, Marcel and Kowal, Julia and Zeng, Xiangyan and Stahlberg, Henning},
+  journal={Journal of structural biology},
+  year={2013},
+  publisher={Elsevier}
+}
+
+
 
