Documentation for 2dx_automator started

--- a/2dx_manual.bib
+++ b/2dx_manual.bib
@@ -62,5 +62,14 @@
   publisher={Elsevier}
 }
 
-
+@article{scherer20142dx_automator,
+  title={2dx\_automator: Implementation of a semiautomatic high-throughput high-resolution cryo-electron crystallography pipeline},
+  author={Scherer, Sebastian and Kowal, Julia and Chami, Mohamed and Dandey, Venkata and Arheit, Marcel and Ringler, Philippe and Stahlberg, Henning},
+  journal={Journal of structural biology},
+  volume={186},
+  number={2},
+  pages={302--307},
+  year={2014},
+  publisher={Elsevier}
+}
 
