SP-docu temporarly removed

--- a/single_particle.tex
+++ b/single_particle.tex
@@ -1,4 +1,4 @@
-\section{Single-Particle Processing for 2D crystals}
+\section{Single Particle Processing for 2D crystals}
 
 In this section we provide detailed instruction on the single-particle refinement module integrated in 2dx since version 3.5.0. Detailed algorithmic background can be found in \cite{scherer2013single}.
 
@@ -6,3 +6,6 @@ In cases where ultra-flat cryo-preparations of well-ordered two-dimensional (2D)
 
 \subsection{Create Container}
 The first single-particle processing script \textit{"Create Container"} is used to create a folder storing all single-particle related files. Simply select/create a folder and run the script. Note that rerunning the script deletes the folder and sets up a new empty project folder.
+
+\subsection{Generate Initial Model}
+
