--- a/automation.tex
+++ b/automation.tex
@@ -9,3 +9,12 @@ https://github.com/C-CINA/2dx/wiki/Automatic-Drift-Correction-C-CINA-setup
 \subsection{Real-time motion-correction}
 
 \subsection{Automatic image processing with 2dx\_automator}
+
+asdf  \autoref{fig:auto} adf.
+
+\begin{figure}
+	\centering
+	\includegraphics[width=1.0\textwidth]{auto.pdf}
+	\caption{2dx\_automator}
+	\label{fig:auto}
+\end{figure}
