outline of 2dx_auto documentation done

--- a/automation.tex
+++ b/automation.tex
@@ -4,11 +4,13 @@ In this section we provide detailed hands-on instruction on automatic image proc
 
 \subsection{Optimal image acquisition}
 
-https://github.com/C-CINA/2dx/wiki/Automatic-Drift-Correction-C-CINA-setup
-
 \subsection{Real-time motion-correction}
 
-\subsection{Automatic image processing with 2dx\_automator}
+https://github.com/C-CINA/2dx/wiki/Automatic-Drift-Correction-C-CINA-setup
+
+\subsection{Automation setup}
+
+\subsection{2dx\_automator}
 
 asdf  \autoref{fig:auto} adf.
 
@@ -17,4 +19,27 @@ asdf  \autoref{fig:auto} adf.
 	\includegraphics[width=1.0\textwidth]{auto.pdf}
 	\caption{2dx\_automator}
 	\label{fig:auto}
+\end{figure}
+
+
+\subsection{Advanced tricks}
+
+\begin{description}
+	\item [Second lattice processing]
+	\item [Manual processing intervention] 
+	\item [Comment editing]
+	\item [Updating image maps]
+	\item [Reprocess an image]
+	\item [Project statistics]
+	\item [IQ-Stat analysis]
+	\item [Configuration file handling] 
+\end{description}
+
+
+
+\begin{figure}
+	\centering
+	\includegraphics[width=1.0\textwidth]{auto_overview.pdf}
+	\caption{Project stat}
+	\label{fig:auto_stat}
 \end{figure}
