closer view on dia images added for 2dx_automator docu

--- a/automation.tex
+++ b/automation.tex
@@ -21,6 +21,13 @@ asdf  \autoref{fig:auto} adf.
 	\label{fig:auto}
 \end{figure}
 
+\begin{figure}
+	\centering
+	\includegraphics[width=1.0\textwidth]{auto2.pdf}
+	\caption{2dx\_automator: Dia images}
+	\label{fig:auto2}
+\end{figure}
+
 
 \subsection{Advanced tricks}
 
