--- a/automation.tex
+++ b/automation.tex
@@ -24,7 +24,7 @@ asdf  \autoref{fig:auto} adf.
 \begin{figure}
 	\centering
 	\includegraphics[width=1.0\textwidth]{auto2.pdf}
-	\caption{2dx\_automator: Dia images}
+	\caption{Diagnostic view of the 2dx\_automator GUI. (i) Fourier transform with Thon rings and (ii) fitted lattice, (iii) peak profile from the unbending step used to mask the image, (iv) locally estimated defocus values, (v) final 2D projection map.}
 	\label{fig:auto2}
 \end{figure}
 
