automation workflow added

--- a/automation.tex
+++ b/automation.tex
@@ -41,6 +41,13 @@ where \texttt{<your\_install\_dir>} equals the second argument passed to the \te
 
 \subsection{Automation setup}
 
+\begin{figure}
+	\centering
+	\includegraphics[width=1.0\textwidth]{auto_workflow.pdf}
+	\caption{2dx\_automator workflow}
+	\label{fig:auto}
+\end{figure}
+
 \subsection{2dx\_automator}
 
 asdf  \autoref{fig:auto} adf.
