more details on liboost dep added

--- a/instal.tex
+++ b/instal.tex
@@ -228,7 +228,7 @@ The compilation of {\twodx} has some additional dependencies compared with the p
 			\item \textbf{Qt4 on Linux} On Ubuntu you can just install \texttt{libqt4-dev} with all the automatically resolved dependencies by means of the native package manager. On Fedora the required package is called \texttt{qt-devel} with \texttt{qtwebkit-devel} as additional required dependency.
 		\end{itemize}
 		
-	\item \textbf{libboost}
+	\item \textbf{libboost} Ubuntu: \texttt{libboost-all-dev}, Fedora: \texttt{boost-devel}.
 \end{itemize}
 
 Note that the name of the required libraries depends on the used operating system. In case you have a missing library the compilation error should be somewhat. Thus resolving the missing dependency should be easy. If you run into troubles don't hesitate to contact us for support.
